[package]
name = "plantgo-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version =  "0.4.41", features = ["serde"]} 
log4rs = "1.2.0"
log = "0.4.20"
serde = {version = "1.0.219", features = ["derive"]}
toml = "0.8.14"
clap = { version = "4.5.38", features = ["derive"] }
dotenv = "0.15.0"
sha2 = "0.10.9"
serde_json = "1.0.140"
